# paml_ros2

./: README.md  my_map.pgm  my_map.yaml  nav2_params.yaml  turtlebot_bridge.py
data/: map_05_08_001.pgm  map_05_08_001.yaml  my_map.pgm  pose_4.txt  tform_0.npy  tform_1.npy  tform_2.npy  tform_3.npy  tform_4.npy  tform_5.npy
data/maps/: map_1776703377.pcd  map_1776703382.pcd  map_1776703388.pcd  map_1776703393.pcd  map_1777504549.pcd  map_1777504705.pcd
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
msc/: frames_2026-04-02_18.12.34.gv
src/localization_bringup/: setup.py
src/localization_bringup/launch/: slam_localization.launch.py
src/map_builder/: setup.cfg  setup.py
src/map_builder/map_builder/: map_builder_live.py
src/mapping_bringup/: setup.py
src/mapping_executor/: package.xml  setup.cfg  setup.py
src/mapping_executor/mapping_executor/: executor_node.py  mapping_client.py  session_manager.py  test_moveit_node.py  ur3_executor.py
src/mapping_interfaces/: CMakeLists.txt
src/mapping_interfaces/install/: local_setup.sh  setup.sh
src/mapping_interfaces/log/: latest_build
src/mapping_planner/: package.xml  setup.cfg  setup.py
src/mapping_planner/mapping_planner/: planner_node.py
src/rgbd_capture/: package.xml  setup.cfg  setup.py
src/turtle_nav/: setup.py
src/turtle_nav/turtle_nav/: nav_node.py
src/ur3_custom_description/: CMakeLists.txt
src/ur3_demo/: CMakeLists.txt  package.xml
src/ur3_demo/launch/: launch.py
src/ur3_demo/src/: move_demo.cpp
src/ur3_movement/: setup.cfg  setup.py
(+192 files in other folders)
